// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SnippetPreview changes the colors of the description if it was generated 1`] = `
<section>
  <div
    className="ijsBvx bAIFnN"
    width={640}
  >
    <div
      className="iwFfCS"
      width={600}
    >
      <div
        className="cllXGM"
      >
        <span
          className="screen-reader-text"
          style={
            Object {
              "clip": "rect(1px, 1px, 1px, 1px)",
              "height": "1px",
              "overflow": "hidden",
              "position": "absolute",
              "width": "1px",
            }
          }
        >
          SEO title preview:
        </span>
        <div
          className="jrzbNu"
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
        >
          <div
            className="kfHzhC"
          >
            <span
              className="hTamdh"
            >
              Title
            </span>
          </div>
        </div>
        <span
          className="screen-reader-text"
          style={
            Object {
              "clip": "rect(1px, 1px, 1px, 1px)",
              "height": "1px",
              "overflow": "hidden",
              "position": "absolute",
              "width": "1px",
            }
          }
        >
          Url preview:
        </span>
        <div
          className="fFcmtz"
        >
          <div
            className="kvZFvD"
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
          >
            https://example.org/
          </div>
        </div>
        <div
          className="bTDJjr"
        />
      </div>
      <div
        className="cllXGM"
      >
        <span
          className="screen-reader-text"
          style={
            Object {
              "clip": "rect(1px, 1px, 1px, 1px)",
              "height": "1px",
              "overflow": "hidden",
              "position": "absolute",
              "width": "1px",
            }
          }
        >
          Meta description preview:
        </span>
        <div
          className="kbuHrI"
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
        >
          Description
        </div>
      </div>
    </div>
  </div>
</section>
`;

exports[`SnippetPreview highlights a keyword in different morphological forms 1`] = `
<section>
  <div
    className="ijsBvx bAIFnN"
    width={640}
  >
    <div
      className="iwFfCS"
      width={600}
    >
      <div
        className="cllXGM"
      >
        <span
          className="screen-reader-text"
          style={
            Object {
              "clip": "rect(1px, 1px, 1px, 1px)",
              "height": "1px",
              "overflow": "hidden",
              "position": "absolute",
              "width": "1px",
            }
          }
        >
          SEO title preview:
        </span>
        <div
          className="jrzbNu"
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
        >
          <div
            className="kfHzhC"
          >
            <span
              className="hTamdh"
            >
              Title
            </span>
          </div>
        </div>
        <span
          className="screen-reader-text"
          style={
            Object {
              "clip": "rect(1px, 1px, 1px, 1px)",
              "height": "1px",
              "overflow": "hidden",
              "position": "absolute",
              "width": "1px",
            }
          }
        >
          Url preview:
        </span>
        <div
          className="fFcmtz"
        >
          <div
            className="kvZFvD"
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
          >
            https://example.org/
          </div>
        </div>
        <div
          className="bTDJjr"
        />
      </div>
      <div
        className="cllXGM"
      >
        <span
          className="screen-reader-text"
          style={
            Object {
              "clip": "rect(1px, 1px, 1px, 1px)",
              "height": "1px",
              "overflow": "hidden",
              "position": "absolute",
              "width": "1px",
            }
          }
        >
          Meta description preview:
        </span>
        <div
          className="kbuHrI"
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
        >
          She
          <strong>
             runs
          </strong>
           every day and every
          <strong>
             run
          </strong>
           is longer than the previous.
          <strong>
             Running
          </strong>
           makes her happy.
        </div>
      </div>
    </div>
  </div>
</section>
`;

exports[`SnippetPreview highlights keywords even if they are transliterated 1`] = `
<section>
  <div
    className="ijsBvx bAIFnN"
    width={640}
  >
    <div
      className="iwFfCS"
      width={600}
    >
      <div
        className="cllXGM"
      >
        <span
          className="screen-reader-text"
          style={
            Object {
              "clip": "rect(1px, 1px, 1px, 1px)",
              "height": "1px",
              "overflow": "hidden",
              "position": "absolute",
              "width": "1px",
            }
          }
        >
          SEO title preview:
        </span>
        <div
          className="jrzbNu"
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
        >
          <div
            className="kfHzhC"
          >
            <span
              className="hTamdh"
            >
              Title
            </span>
          </div>
        </div>
        <span
          className="screen-reader-text"
          style={
            Object {
              "clip": "rect(1px, 1px, 1px, 1px)",
              "height": "1px",
              "overflow": "hidden",
              "position": "absolute",
              "width": "1px",
            }
          }
        >
          Url preview:
        </span>
        <div
          className="fFcmtz"
        >
          <div
            className="kvZFvD"
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
          >
            https://example.org/
          </div>
        </div>
        <div
          className="bTDJjr"
        />
      </div>
      <div
        className="cllXGM"
      >
        <span
          className="screen-reader-text"
          style={
            Object {
              "clip": "rect(1px, 1px, 1px, 1px)",
              "height": "1px",
              "overflow": "hidden",
              "position": "absolute",
              "width": "1px",
            }
          }
        >
          Meta description preview:
        </span>
        <div
          className="kbuHrI"
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
        >
          Something with a transliterated
          <strong>
             kaayword
          </strong>
        </div>
      </div>
    </div>
  </div>
</section>
`;

exports[`SnippetPreview highlights keywords inside the description and url 1`] = `
<section>
  <div
    className="ijsBvx bAIFnN"
    width={640}
  >
    <div
      className="iwFfCS"
      width={600}
    >
      <div
        className="cllXGM"
      >
        <span
          className="screen-reader-text"
          style={
            Object {
              "clip": "rect(1px, 1px, 1px, 1px)",
              "height": "1px",
              "overflow": "hidden",
              "position": "absolute",
              "width": "1px",
            }
          }
        >
          SEO title preview:
        </span>
        <div
          className="jrzbNu"
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
        >
          <div
            className="kfHzhC"
          >
            <span
              className="hTamdh"
            >
              Title
            </span>
          </div>
        </div>
        <span
          className="screen-reader-text"
          style={
            Object {
              "clip": "rect(1px, 1px, 1px, 1px)",
              "height": "1px",
              "overflow": "hidden",
              "position": "absolute",
              "width": "1px",
            }
          }
        >
          Url preview:
        </span>
        <div
          className="fFcmtz"
        >
          <div
            className="kvZFvD"
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
          >
            https://example.org/this-keyword-url/
          </div>
        </div>
        <div
          className="bTDJjr"
        />
      </div>
      <div
        className="cllXGM"
      >
        <span
          className="screen-reader-text"
          style={
            Object {
              "clip": "rect(1px, 1px, 1px, 1px)",
              "height": "1px",
              "overflow": "hidden",
              "position": "absolute",
              "width": "1px",
            }
          }
        >
          Meta description preview:
        </span>
        <div
          className="kbuHrI"
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
        >
          Something with a
          <strong>
             keyword
          </strong>
        </div>
      </div>
    </div>
  </div>
</section>
`;

exports[`SnippetPreview highlights separate words from the keyphrase 1`] = `
<section>
  <div
    className="ijsBvx bAIFnN"
    width={640}
  >
    <div
      className="iwFfCS"
      width={600}
    >
      <div
        className="cllXGM"
      >
        <span
          className="screen-reader-text"
          style={
            Object {
              "clip": "rect(1px, 1px, 1px, 1px)",
              "height": "1px",
              "overflow": "hidden",
              "position": "absolute",
              "width": "1px",
            }
          }
        >
          SEO title preview:
        </span>
        <div
          className="jrzbNu"
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
        >
          <div
            className="kfHzhC"
          >
            <span
              className="hTamdh"
            >
              Title
            </span>
          </div>
        </div>
        <span
          className="screen-reader-text"
          style={
            Object {
              "clip": "rect(1px, 1px, 1px, 1px)",
              "height": "1px",
              "overflow": "hidden",
              "position": "absolute",
              "width": "1px",
            }
          }
        >
          Url preview:
        </span>
        <div
          className="fFcmtz"
        >
          <div
            className="kvZFvD"
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
          >
            https://example.org/
          </div>
        </div>
        <div
          className="bTDJjr"
        />
      </div>
      <div
        className="cllXGM"
      >
        <span
          className="screen-reader-text"
          style={
            Object {
              "clip": "rect(1px, 1px, 1px, 1px)",
              "height": "1px",
              "overflow": "hidden",
              "position": "absolute",
              "width": "1px",
            }
          }
        >
          Meta description preview:
        </span>
        <div
          className="kbuHrI"
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
        >
          She
          <strong>
             runs
          </strong>
          <strong>
             every
          </strong>
           day and
          <strong>
             every
          </strong>
          <strong>
             run
          </strong>
           is longer than the previous.
          <strong>
             Running
          </strong>
           makes her happy.
        </div>
      </div>
    </div>
  </div>
</section>
`;

exports[`SnippetPreview mobile mode renders an AMP logo when isAmp is true 1`] = `
<section>
  <div
    className="jDjROD"
    onMouseLeave={undefined}
    width={640}
  >
    <div
      className="kEjIkz"
    >
      <span
        className="screen-reader-text"
        style={
          Object {
            "clip": "rect(1px, 1px, 1px, 1px)",
            "height": "1px",
            "overflow": "hidden",
            "position": "absolute",
            "width": "1px",
          }
        }
      >
        SEO title preview:
      </span>
      <div
        className="jrzbNu"
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
      >
        <div
          className="kfHzhC"
        >
          <span
            className="iOHwuu"
          >
            Title
          </span>
        </div>
      </div>
      <span
        className="screen-reader-text"
        style={
          Object {
            "clip": "rect(1px, 1px, 1px, 1px)",
            "height": "1px",
            "overflow": "hidden",
            "position": "absolute",
            "width": "1px",
          }
        }
      >
        Url preview:
      </span>
      <div
        className="jrefSY"
      />
      <div
        className="fFcmtz"
      >
        <div
          className="kvZFvD"
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
        >
          https://example.org
        </div>
      </div>
    </div>
    <hr
      className="hKmbcw"
    />
    <div
      className="kEjIkz"
    >
      <span
        className="screen-reader-text"
        style={
          Object {
            "clip": "rect(1px, 1px, 1px, 1px)",
            "height": "1px",
            "overflow": "hidden",
            "position": "absolute",
            "width": "1px",
          }
        }
      >
        Meta description preview:
      </span>
      <div
        className="iupvCD"
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
      >
        <div
          className="iupvCD"
        >
          Description
        </div>
      </div>
    </div>
  </div>
</section>
`;

exports[`SnippetPreview mobile mode renders differently than desktop 1`] = `
<section>
  <div
    className="jDjROD"
    onMouseLeave={undefined}
    width={640}
  >
    <div
      className="kEjIkz"
    >
      <span
        className="screen-reader-text"
        style={
          Object {
            "clip": "rect(1px, 1px, 1px, 1px)",
            "height": "1px",
            "overflow": "hidden",
            "position": "absolute",
            "width": "1px",
          }
        }
      >
        SEO title preview:
      </span>
      <div
        className="jrzbNu"
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
      >
        <div
          className="kfHzhC"
        >
          <span
            className="iOHwuu"
          >
            Title
          </span>
        </div>
      </div>
      <span
        className="screen-reader-text"
        style={
          Object {
            "clip": "rect(1px, 1px, 1px, 1px)",
            "height": "1px",
            "overflow": "hidden",
            "position": "absolute",
            "width": "1px",
          }
        }
      >
        Url preview:
      </span>
      <div
        className="fFcmtz"
      >
        <div
          className="kvZFvD"
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
        >
          https://example.org
        </div>
      </div>
    </div>
    <hr
      className="hKmbcw"
    />
    <div
      className="kEjIkz"
    >
      <span
        className="screen-reader-text"
        style={
          Object {
            "clip": "rect(1px, 1px, 1px, 1px)",
            "height": "1px",
            "overflow": "hidden",
            "position": "absolute",
            "width": "1px",
          }
        }
      >
        Meta description preview:
      </span>
      <div
        className="iupvCD"
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
      >
        <div
          className="iupvCD"
        >
          Description
        </div>
      </div>
    </div>
  </div>
</section>
`;

exports[`SnippetPreview renders a SnippetPreview in the default mode 1`] = `
<section>
  <div
    className="jDjROD"
    onMouseLeave={undefined}
    width={640}
  >
    <div
      className="kEjIkz"
    >
      <span
        className="screen-reader-text"
        style={
          Object {
            "clip": "rect(1px, 1px, 1px, 1px)",
            "height": "1px",
            "overflow": "hidden",
            "position": "absolute",
            "width": "1px",
          }
        }
      >
        SEO title preview:
      </span>
      <div
        className="jrzbNu"
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
      >
        <div
          className="kfHzhC"
        >
          <span
            className="iOHwuu"
          >
            Title
          </span>
        </div>
      </div>
      <span
        className="screen-reader-text"
        style={
          Object {
            "clip": "rect(1px, 1px, 1px, 1px)",
            "height": "1px",
            "overflow": "hidden",
            "position": "absolute",
            "width": "1px",
          }
        }
      >
        Url preview:
      </span>
      <div
        className="fFcmtz"
      >
        <div
          className="kvZFvD"
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
        >
          https://example.org
        </div>
      </div>
    </div>
    <hr
      className="hKmbcw"
    />
    <div
      className="kEjIkz"
    >
      <span
        className="screen-reader-text"
        style={
          Object {
            "clip": "rect(1px, 1px, 1px, 1px)",
            "height": "1px",
            "overflow": "hidden",
            "position": "absolute",
            "width": "1px",
          }
        }
      >
        Meta description preview:
      </span>
      <div
        className="iupvCD"
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
      >
        <div
          className="iupvCD"
        >
          Description
        </div>
      </div>
    </div>
  </div>
</section>
`;

exports[`SnippetPreview renders a SnippetPreview that looks like Google 1`] = `
<section>
  <div
    className="ijsBvx bAIFnN"
    width={640}
  >
    <div
      className="iwFfCS"
      width={600}
    >
      <div
        className="cllXGM"
      >
        <span
          className="screen-reader-text"
          style={
            Object {
              "clip": "rect(1px, 1px, 1px, 1px)",
              "height": "1px",
              "overflow": "hidden",
              "position": "absolute",
              "width": "1px",
            }
          }
        >
          SEO title preview:
        </span>
        <div
          className="jrzbNu"
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
        >
          <div
            className="kfHzhC"
          >
            <span
              className="hTamdh"
            >
              Title
            </span>
          </div>
        </div>
        <span
          className="screen-reader-text"
          style={
            Object {
              "clip": "rect(1px, 1px, 1px, 1px)",
              "height": "1px",
              "overflow": "hidden",
              "position": "absolute",
              "width": "1px",
            }
          }
        >
          Url preview:
        </span>
        <div
          className="fFcmtz"
        >
          <div
            className="kvZFvD"
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
          >
            https://example.org/
          </div>
        </div>
        <div
          className="bTDJjr"
        />
      </div>
      <div
        className="cllXGM"
      >
        <span
          className="screen-reader-text"
          style={
            Object {
              "clip": "rect(1px, 1px, 1px, 1px)",
              "height": "1px",
              "overflow": "hidden",
              "position": "absolute",
              "width": "1px",
            }
          }
        >
          Meta description preview:
        </span>
        <div
          className="kbuHrI"
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
        >
          Description
        </div>
      </div>
    </div>
  </div>
</section>
`;

exports[`SnippetPreview renders a caret on activation 1`] = `
<section>
  <div
    className="ijsBvx bAIFnN"
    width={640}
  >
    <div
      className="iwFfCS"
      width={600}
    >
      <div
        className="cllXGM"
      >
        <span
          className="screen-reader-text"
          style={
            Object {
              "clip": "rect(1px, 1px, 1px, 1px)",
              "height": "1px",
              "overflow": "hidden",
              "position": "absolute",
              "width": "1px",
            }
          }
        >
          SEO title preview:
        </span>
        <div
          className="hZrSgl"
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
        >
          <div
            className="kfHzhC"
          >
            <span
              className="hTamdh"
            >
              Title
            </span>
          </div>
        </div>
        <span
          className="screen-reader-text"
          style={
            Object {
              "clip": "rect(1px, 1px, 1px, 1px)",
              "height": "1px",
              "overflow": "hidden",
              "position": "absolute",
              "width": "1px",
            }
          }
        >
          Url preview:
        </span>
        <div
          className="fFcmtz"
        >
          <div
            className="kvZFvD"
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
          >
            https://example.org/
          </div>
        </div>
        <div
          className="bTDJjr"
        />
      </div>
      <div
        className="cllXGM"
      >
        <span
          className="screen-reader-text"
          style={
            Object {
              "clip": "rect(1px, 1px, 1px, 1px)",
              "height": "1px",
              "overflow": "hidden",
              "position": "absolute",
              "width": "1px",
            }
          }
        >
          Meta description preview:
        </span>
        <div
          className="kbuHrI"
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
        >
          Description
        </div>
      </div>
    </div>
  </div>
</section>
`;

exports[`SnippetPreview renders a caret on activation 2`] = `
<section>
  <div
    className="ijsBvx bAIFnN"
    width={640}
  >
    <div
      className="iwFfCS"
      width={600}
    >
      <div
        className="cllXGM"
      >
        <span
          className="screen-reader-text"
          style={
            Object {
              "clip": "rect(1px, 1px, 1px, 1px)",
              "height": "1px",
              "overflow": "hidden",
              "position": "absolute",
              "width": "1px",
            }
          }
        >
          SEO title preview:
        </span>
        <div
          className="jrzbNu"
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
        >
          <div
            className="kfHzhC"
          >
            <span
              className="hTamdh"
            >
              Title
            </span>
          </div>
        </div>
        <span
          className="screen-reader-text"
          style={
            Object {
              "clip": "rect(1px, 1px, 1px, 1px)",
              "height": "1px",
              "overflow": "hidden",
              "position": "absolute",
              "width": "1px",
            }
          }
        >
          Url preview:
        </span>
        <div
          className="fFcmtz"
        >
          <div
            className="kvZFvD"
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
          >
            https://example.org/
          </div>
        </div>
        <div
          className="bTDJjr"
        />
      </div>
      <div
        className="cllXGM"
      >
        <span
          className="screen-reader-text"
          style={
            Object {
              "clip": "rect(1px, 1px, 1px, 1px)",
              "height": "1px",
              "overflow": "hidden",
              "position": "absolute",
              "width": "1px",
            }
          }
        >
          Meta description preview:
        </span>
        <div
          className="depKhh"
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
        >
          Description
        </div>
      </div>
    </div>
  </div>
</section>
`;

exports[`SnippetPreview renders a caret on activation 3`] = `
<section>
  <div
    className="ijsBvx bAIFnN"
    width={640}
  >
    <div
      className="iwFfCS"
      width={600}
    >
      <div
        className="cllXGM"
      >
        <span
          className="screen-reader-text"
          style={
            Object {
              "clip": "rect(1px, 1px, 1px, 1px)",
              "height": "1px",
              "overflow": "hidden",
              "position": "absolute",
              "width": "1px",
            }
          }
        >
          SEO title preview:
        </span>
        <div
          className="jrzbNu"
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
        >
          <div
            className="kfHzhC"
          >
            <span
              className="hTamdh"
            >
              Title
            </span>
          </div>
        </div>
        <span
          className="screen-reader-text"
          style={
            Object {
              "clip": "rect(1px, 1px, 1px, 1px)",
              "height": "1px",
              "overflow": "hidden",
              "position": "absolute",
              "width": "1px",
            }
          }
        >
          Url preview:
        </span>
        <div
          className="cjepN"
        >
          <div
            className="kvZFvD"
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
          >
            https://example.org/
          </div>
        </div>
        <div
          className="bTDJjr"
        />
      </div>
      <div
        className="cllXGM"
      >
        <span
          className="screen-reader-text"
          style={
            Object {
              "clip": "rect(1px, 1px, 1px, 1px)",
              "height": "1px",
              "overflow": "hidden",
              "position": "absolute",
              "width": "1px",
            }
          }
        >
          Meta description preview:
        </span>
        <div
          className="kbuHrI"
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
        >
          Description
        </div>
      </div>
    </div>
  </div>
</section>
`;

exports[`SnippetPreview renders a caret on hover 1`] = `
<section>
  <div
    className="ijsBvx bAIFnN"
    width={640}
  >
    <div
      className="iwFfCS"
      width={600}
    >
      <div
        className="cllXGM"
      >
        <span
          className="screen-reader-text"
          style={
            Object {
              "clip": "rect(1px, 1px, 1px, 1px)",
              "height": "1px",
              "overflow": "hidden",
              "position": "absolute",
              "width": "1px",
            }
          }
        >
          SEO title preview:
        </span>
        <div
          className="bmzBVJ"
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
        >
          <div
            className="kfHzhC"
          >
            <span
              className="hTamdh"
            >
              Title
            </span>
          </div>
        </div>
        <span
          className="screen-reader-text"
          style={
            Object {
              "clip": "rect(1px, 1px, 1px, 1px)",
              "height": "1px",
              "overflow": "hidden",
              "position": "absolute",
              "width": "1px",
            }
          }
        >
          Url preview:
        </span>
        <div
          className="fFcmtz"
        >
          <div
            className="kvZFvD"
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
          >
            https://example.org/
          </div>
        </div>
        <div
          className="bTDJjr"
        />
      </div>
      <div
        className="cllXGM"
      >
        <span
          className="screen-reader-text"
          style={
            Object {
              "clip": "rect(1px, 1px, 1px, 1px)",
              "height": "1px",
              "overflow": "hidden",
              "position": "absolute",
              "width": "1px",
            }
          }
        >
          Meta description preview:
        </span>
        <div
          className="kbuHrI"
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
        >
          Description
        </div>
      </div>
    </div>
  </div>
</section>
`;

exports[`SnippetPreview renders a caret on hover 2`] = `
<section>
  <div
    className="ijsBvx bAIFnN"
    width={640}
  >
    <div
      className="iwFfCS"
      width={600}
    >
      <div
        className="cllXGM"
      >
        <span
          className="screen-reader-text"
          style={
            Object {
              "clip": "rect(1px, 1px, 1px, 1px)",
              "height": "1px",
              "overflow": "hidden",
              "position": "absolute",
              "width": "1px",
            }
          }
        >
          SEO title preview:
        </span>
        <div
          className="jrzbNu"
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
        >
          <div
            className="kfHzhC"
          >
            <span
              className="hTamdh"
            >
              Title
            </span>
          </div>
        </div>
        <span
          className="screen-reader-text"
          style={
            Object {
              "clip": "rect(1px, 1px, 1px, 1px)",
              "height": "1px",
              "overflow": "hidden",
              "position": "absolute",
              "width": "1px",
            }
          }
        >
          Url preview:
        </span>
        <div
          className="fFcmtz"
        >
          <div
            className="kvZFvD"
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
          >
            https://example.org/
          </div>
        </div>
        <div
          className="bTDJjr"
        />
      </div>
      <div
        className="cllXGM"
      >
        <span
          className="screen-reader-text"
          style={
            Object {
              "clip": "rect(1px, 1px, 1px, 1px)",
              "height": "1px",
              "overflow": "hidden",
              "position": "absolute",
              "width": "1px",
            }
          }
        >
          Meta description preview:
        </span>
        <div
          className="jLPVwJ"
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
        >
          Description
        </div>
      </div>
    </div>
  </div>
</section>
`;

exports[`SnippetPreview renders a caret on hover 3`] = `
<section>
  <div
    className="ijsBvx bAIFnN"
    width={640}
  >
    <div
      className="iwFfCS"
      width={600}
    >
      <div
        className="cllXGM"
      >
        <span
          className="screen-reader-text"
          style={
            Object {
              "clip": "rect(1px, 1px, 1px, 1px)",
              "height": "1px",
              "overflow": "hidden",
              "position": "absolute",
              "width": "1px",
            }
          }
        >
          SEO title preview:
        </span>
        <div
          className="jrzbNu"
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
        >
          <div
            className="kfHzhC"
          >
            <span
              className="hTamdh"
            >
              Title
            </span>
          </div>
        </div>
        <span
          className="screen-reader-text"
          style={
            Object {
              "clip": "rect(1px, 1px, 1px, 1px)",
              "height": "1px",
              "overflow": "hidden",
              "position": "absolute",
              "width": "1px",
            }
          }
        >
          Url preview:
        </span>
        <div
          className="bJWIpz"
        >
          <div
            className="kvZFvD"
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
          >
            https://example.org/
          </div>
        </div>
        <div
          className="bTDJjr"
        />
      </div>
      <div
        className="cllXGM"
      >
        <span
          className="screen-reader-text"
          style={
            Object {
              "clip": "rect(1px, 1px, 1px, 1px)",
              "height": "1px",
              "overflow": "hidden",
              "position": "absolute",
              "width": "1px",
            }
          }
        >
          Meta description preview:
        </span>
        <div
          className="kbuHrI"
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
        >
          Description
        </div>
      </div>
    </div>
  </div>
</section>
`;

exports[`SnippetPreview shows the date if a date is passed 1`] = `
<section>
  <div
    className="ijsBvx bAIFnN"
    width={640}
  >
    <div
      className="iwFfCS"
      width={600}
    >
      <div
        className="cllXGM"
      >
        <span
          className="screen-reader-text"
          style={
            Object {
              "clip": "rect(1px, 1px, 1px, 1px)",
              "height": "1px",
              "overflow": "hidden",
              "position": "absolute",
              "width": "1px",
            }
          }
        >
          SEO title preview:
        </span>
        <div
          className="jrzbNu"
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
        >
          <div
            className="kfHzhC"
          >
            <span
              className="hTamdh"
            >
              Title
            </span>
          </div>
        </div>
        <span
          className="screen-reader-text"
          style={
            Object {
              "clip": "rect(1px, 1px, 1px, 1px)",
              "height": "1px",
              "overflow": "hidden",
              "position": "absolute",
              "width": "1px",
            }
          }
        >
          Url preview:
        </span>
        <div
          className="fFcmtz"
        >
          <div
            className="kvZFvD"
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
          >
            https://example.org/
          </div>
        </div>
        <div
          className="bTDJjr"
        />
      </div>
      <div
        className="cllXGM"
      >
        <span
          className="screen-reader-text"
          style={
            Object {
              "clip": "rect(1px, 1px, 1px, 1px)",
              "height": "1px",
              "overflow": "hidden",
              "position": "absolute",
              "width": "1px",
            }
          }
        >
          Meta description preview:
        </span>
        <div
          className="kbuHrI"
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
        >
          <span
            className="dSewZv"
          >
            Today
             - 
          </span>
          Description
        </div>
      </div>
    </div>
  </div>
</section>
`;
